added some styling to UI

--- a/static/index.html
+++ b/static/index.html
@@ -41,18 +41,14 @@
                 <span id='histogramIndicator'></span>
             </section>
             <section class='lvl2'>
-                <div>
+                <div id='histogramCont'>
                     <img id='histogramImg'>
-                </div>
-                <div>
-                    <input id='IlowFrac' type='range' class='slider' step='0.01' min='0.0' max='1.0' value='0.0'>
                     <label>Left edge &nbsp;</label>
-                    <br>
-                    <input id='IpeakFrac' type='range' class='slider' step='0.01' min='0.0' max='1.0' value='0.5'>
+                    <input id='IlowFrac' type='range' class='slider' step='0.01' min='0.0' max='1.0' value='0.0'>
                     <label>Peak position &nbsp;</label>
-                    <br>
-                    <input id='IhighFrac' type='range' class='slider' step='0.01' min='0.0' max='1.0' value='1.0'>
+                    <input id='IpeakFrac' type='range' class='slider' step='0.01' min='0.0' max='1.0' value='0.5'>
                     <label>Right edge &nbsp;</label>
+                    <input id='IhighFrac' type='range' class='slider' step='0.01' min='0.0' max='1.0' value='1.0'>
                 </div>
             </section>
         </section>
