--- a/static/setup.html
+++ b/static/setup.html
@@ -86,7 +86,7 @@
                     <label>Number of times data is filtered during core axis regression</label>
                     <input id='FilterSteps' type='number' name='FilterSteps' min='0' step='1' max='10'>
                     
-                    <label>Maximum core angle that automatic detection can calculate</label>
+                    <label>Maximum core angle that automatic detection can calculate (&deg;)</label>
                     <input id='MaxTheta' type='number' name='MaxTheta' min='0' step='1' max='10'>
                 </div>
             </section>
