added instructions under file explorer

--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,8 @@
         <section class='lvl1'>
             <h1>File Explorer</h1>
             <section class='lvl2'>
+                <p>Click on one of the folder names to navigate down one level. Click on the directory path to navigate up one level. 
+                Note that your OS security settings may prevent you from navigating outside of certain directories without administrative privileges.</p>
                 <input id='selectAll' type='checkbox'><label>Select all</label>
             </section>
             <section class='lvl2' id='fileList'></section>
